--- a/why-choose-us.html
+++ b/why-choose-us.html
@@ -15,6 +15,7 @@
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
+    nav a.active { text-decoration: underline; color: #FFD700; }
     section { padding: 2rem; max-width: 900px; margin: auto; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; }
     @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
@@ -32,7 +33,7 @@
   <a href="index.html">Home</a>
   <a href="services.html">Services</a>
   <a href="tips.html">Safety Tips</a>
-  <a href="why-choose-us.html">Why Choose Us</a>
+  <a href="why-choose-us.html" class="active">Why Choose Us</a>
   <a href="contact.html">Contact</a>
 </nav>
 
