--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
+    nav a.active { text-decoration: underline; color: #FFD700; }
     section { padding: 2rem; max-width: 900px; margin: auto; }
     form input, form textarea { width: 100%; padding: 0.5rem; }
     button { margin-top: 1rem; padding: 0.5rem 1rem; }
@@ -35,7 +36,7 @@
   <a href="services.html">Services</a>
   <a href="tips.html">Safety Tips</a>
   <a href="why-choose-us.html">Why Choose Us</a>
-  <a href="contact.html">Contact</a>
+  <a href="contact.html" class="active">Contact</a>
 </nav>
 
 <section>
