--- a/services.html
+++ b/services.html
@@ -12,8 +12,14 @@
     body { font-family: Arial, sans-serif; margin: 0; }
     .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: #fff; padding: 1.5rem 2rem; }
     .logo { max-height: 160px; }
-    .site-header h1 { text-shadow: 2px 2px 4px rgba(0,0,0,0.7); }
-    section h2 { text-shadow: 1px 1px 2px rgba(0,0,0,0.7); color: #0b3c5d; }
+    .site-header h1 { 
+      text-shadow: 2px 2px 0 #000, -2px 2px 0 #000, 2px -2px 0 #000, -2px -2px 0 #000,
+                   2px 0 0 #000, 0 2px 0 #000, -2px 0 0 #000, 0 -2px 0 #000;
+    }
+    section h2 { 
+      text-shadow: 1px 1px 0 #000, -1px 1px 0 #000, 1px -1px 0 #000, -1px -1px 0 #000; 
+      color: #0b3c5d; 
+    }
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
@@ -22,6 +28,8 @@
     ul { line-height: 1.8; }
     footer { background: #f4f4f4; text-align: center; padding: 1rem; }
     @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
+    a.contact-link { color: #222; text-decoration: none; font-weight: bold; }
+    a.contact-link:hover { text-decoration: underline; }
   </style>
 </head>
 
@@ -29,7 +37,10 @@
 
 <header class="site-header">
   <img src="images/FCELLC.jpg" alt="Logo" class="logo">
-  <h1>Our Services</h1>
+  <div>
+    <h1>Our Services</h1>
+    <p>📞 <a href="tel:3303459389" class="contact-link">(330) 345-9389</a> | ✉️ <a href="mailto:S.henderson@fastcurrentelectric.com" class="contact-link">S.henderson@fastcurrentelectric.com</a></p>
+  </div>
 </header>
 
 <nav>
@@ -51,7 +62,7 @@
 </section>
 
 <footer>
-  <p>📞 (330) 345-9389 | ✉️ S.henderson@fastcurrentelectric.com</p>
+  <p>📞 <a href="tel:3303459389" class="contact-link">(330) 345-9389</a> | ✉️ <a href="mailto:S.henderson@fastcurrentelectric.com" class="contact-link">S.henderson@fastcurrentelectric.com</a></p>
 </footer>
 
 </body>
