--- a/index.html
+++ b/index.html
@@ -13,11 +13,18 @@
     .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: #fff; padding: 1.5rem 2rem; }
     .logo { max-height: 160px; width: auto; }
     .site-header h1 { 
-      text-shadow: 2px 2px 0 #000, -2px 2px 0 #000, 2px -2px 0 #000, -2px -2px 0 #000,
-                   2px 0 0 #000, 0 2px 0 #000, -2px 0 0 #000, 0 -2px 0 #000;
+      text-shadow: 
+         3px 3px 0 #000, -3px 3px 0 #000, 
+         3px -3px 0 #000, -3px -3px 0 #000,
+         3px 0 0 #000, 0 3px 0 #000,
+        -3px 0 0 #000, 0 -3px 0 #000;
     }
     section h2 { 
-      text-shadow: 1px 1px 0 #000, -1px 1px 0 #000, 1px -1px 0 #000, -1px -1px 0 #000; 
+      text-shadow: 
+         2px 2px 0 #000, -2px 2px 0 #000, 
+         2px -2px 0 #000, -2px -2px 0 #000,
+         2px 0 0 #000, 0 2px 0 #000,
+        -2px 0 0 #000, 0 -2px 0 #000;
       color: #0b3c5d; 
     }
     nav { background: #062a40; padding: 0.75rem; text-align: center; }
