--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact | Fast Current Electric LLC</title>
-  <meta name="description" content="Contact Fast Current Electric LLC for residential electrical services in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and nearby areas.">
+  <meta name="description" content="Get in touch with Fast Current Electric LLC for residential electrical services in Akron, OH, Wooster, OH, Canton, OH, Massillon, OH, and surrounding areas.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="images/favicon.png" type="image/png">
 
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; color: #222; }
-    .site-header { display: flex; align-items: center; gap: 1.5rem; background-image: url('images/background.png'); background-size: cover; background-position: center; color: white; padding: 1.5rem 2rem; }
-    .logo { max-height: 160px; width: auto; }
+    body { font-family: Arial, sans-serif; margin: 0; color: #222; text-align: center; }
+    .site-header { display: flex; flex-direction: column; align-items: center; background-image: url('images/background.png'); background-size: cover; background-position: center; color: white; padding: 1.5rem 2rem; }
+    .logo { max-height: 160px; width: auto; margin-bottom: 1rem; }
 
     .site-header h1 {
         color: white;
@@ -22,20 +22,25 @@
             2px -2px 0 black,
             -2px 2px 0 black,
             2px 2px 0 black;
+        margin: 0;
     }
 
-    section h2 { color: black; font-weight: bold; font-size: 1.8rem; }
-    nav { background: #062a40; padding: 0.75rem; text-align: center; }
+    nav { background: #062a40; padding: 0.75rem; }
     nav a { color: #fff; margin: 0 1rem; text-decoration: none; font-weight: bold; }
     nav a:hover { text-decoration: underline; }
     nav a.active { text-decoration: underline; color: #FFD700; }
 
-    section { padding: 2rem; max-width: 900px; margin: auto; line-height: 1.6; }
-    .card { border: 1px solid #ddd; padding: 1rem; border-radius: 5px; background: rgba(255,255,255,0.9); margin-bottom: 1rem; }
+    section { padding: 2rem; max-width: 900px; margin: auto; line-height: 1.6; text-align: left; }
+    section h2 { color: black; font-weight: bold; font-size: 1.8rem; margin-bottom: 1rem; text-align: center; }
+
+    form { background: rgba(255,255,255,0.95); padding: 1.5rem; border-radius: 5px; max-width: 600px; margin: auto; }
+    form p { margin-bottom: 1rem; }
+    input, textarea { width: 100%; padding: 0.5rem; border: 1px solid #ccc; border-radius: 3px; }
+
+    button { background: #0b3c5d; color: white; padding: 0.7rem 1.2rem; border: none; border-radius: 3px; font-weight: bold; cursor: pointer; }
+    button:hover { background: #062a40; }
+
     footer { background: #f4f4f4; text-align: center; padding: 1rem; font-size: 0.9rem; }
-
-    @media (max-width: 600px) { .site-header { flex-direction: column; text-align: center; } }
-
     .contact-link { color: black; text-decoration: none; font-weight: bold; }
     .contact-link:hover { text-decoration: underline; }
   </style>
@@ -58,8 +63,6 @@
 
 <section>
   <h2>Send a Message</h2>
-  <p>Use the form below to contact Fast Current Electric LLC for non-emergency questions or service requests.</p>
-
   <form action="https://formspree.io/f/mojqoboz" method="POST">
     <p>
       <label>
@@ -84,8 +87,7 @@
 
     <button type="submit">Send Message</button>
   </form>
-
-  <p style="font-size: 0.9rem;">For emergencies, call 911.</p>
+  <p style="text-align:center; font-size:0.9rem;">For emergencies, call 911.</p>
 </section>
 
 <footer>
